[signal] signal-cli 0.11.11
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>